Fixing dark mode button and close modal button

--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@ a[btn-nav]{
 .dark {
     position: absolute;
     top: 2px;
-    right: 5px;
+    left: 5px;
     font-size: 20px;
     cursor: pointer;
     outline: 1px solid #000;
@@ -43,7 +43,7 @@ a[btn-nav]{
 .light {
     position: absolute;
     top: 2px;
-    right: 5px;
+    left: 5px;
     font-size: 20px;
     display: none;
     cursor: pointer;
@@ -65,10 +65,6 @@ a[btn-nav]{
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
-}
-
-.selected {
-    border-bottom: 2px solid #f2f2f2;
 }
 
 .we-container {
@@ -171,7 +167,7 @@ a[btn-nav]{
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.8);
     display: none;
     z-index: 5;
 }
